# bitcache

./: .gitignore  ARCHITECTURE_ANALYSIS.md  BENCHMARKS.md  Cargo.toml  GUIDE.md  LICENSE  PROGRESS.md  README.md  paper.md  paper_final.md  paper_gen2_section.md  pyproject.toml
.kiro/specs/adaptive-forgetting/: .config.kiro  design.md
benches/: full_benchmark.rs  paper_validation.rs  quick_metrics.rs  real_embeddings_bench.rs
benchmarks/: bench_recall_memory.py  eval_full.py  eval_real_data.py  eval_realistic.py  eval_scale.py
benchmarks/agent_memory/: benchmark_llm_judge.py  bitcache_smart.py  phase1_benchmark.py  results.json  results_llm_judge.json  simulator.py
benchmarks/results/: eval_all_dbs.json  eval_realistic.json  eval_rf_curve.csv  eval_scale.csv  eval_scale.json
bitcache/: __init__.py  float_routed.py  graph.py  graph_memory.py  index.py  memory.py  partitioned.py  quantize.py  search.py  streaming.py  three_stage.py  two_stage.py
bitcache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: agent_memory_demo.py
experiments/: generate_real_embeddings.py
experiments/paper1_staged_retrieval/: eval_all_dbs.py  eval_rf_curve.py  eval_vectordbs.py
experiments/paper1_staged_retrieval/results/: eval_full.json  eval_real_data.json  eval_rf_curve.json  eval_vectordbs.json
experiments/paper3_memory_systems/: eval_agent_workload.py
experiments/sift1m_results/: comparison.json
papers/: REPRODUCIBILITY.md  paper1_staged_retrieval.md  paper2_semantic_routing.md  paper3_memory_systems.md
papers/docx/: Paper1_Staged_Retrieval.docx  Paper2_Semantic_Routing.docx  Paper3_Memory_Systems.docx
scripts/: generate_docx.py  generate_figures.py
src/: confidence.rs  emotional.rs  float_routed.rs  forgetting.rs  graph_memory.rs  index.rs  lib.rs  memory.rs  partitioned.rs  python.rs  quantize.rs  search.rs  streaming.rs  temporal.rs  three_stage.rs  two_stage.rs
tests/: test_bitcache.py  test_float_routed.py  test_graph.py  test_graph_memory.py  test_memory.py  test_partitioned.py  test_streaming.py  test_two_stage.py
